@@ -76,6 +76,7 @@ from __future__ import absolute_import
 import functools
 import itertools
 import warnings
+from six import raise_from
 
 from . import base
 from ..topology.tables import SYMB2Z
@@ -174,9 +175,10 @@ class ParmEdConverter(base.ConverterBase):
             ag_or_ts = obj.atoms
         except AttributeError:
             if isinstance(obj, base.Timestep):
-                ag_or_ts = obj.copy()
+                raise ValueError("Writing Timesteps to ParmEd "
+                                 "objects is not supported")
             else:
-                raise_from(TypeError("No Timestep found in obj argument"), None)
+                raise_from(TypeError("No atoms found in obj argument"), None)
 
         # Check for topology information
         missing_topology = []
